Column Responsive for Small Screen

--- a/src/pages/CMS Panels/Dashboard.css
+++ b/src/pages/CMS Panels/Dashboard.css
@@ -7,7 +7,7 @@ header{
     background: #ffffff;
 }
 header Row {
-    margin: 0px !important;
+    margin: 0px 
 }
 header .logo{
     text-decoration: none;
